--- a/_data/app.yml
+++ b/_data/app.yml
@@ -1,21 +1,14 @@
-name: Mobile App Name
-description: A super tagline for the mobile app
-full_description: 'A more complete description of the mobile app<br>
-<br>With a lot of features:
-<br>- Feature 1
-<br>- Feature 2
-<br>- Feature 3'
-android: https://telegra.ph/Replace-this-link-07-23
-iOS: https://telegra.ph/Replace-this-link-07-23
-web: https://telegra.ph/Replace-this-link-07-23
+name: Waka Watch
+description: WakaTime on your Apple Watch
+full_description:
+  "Waka Watch allows you to view your WakaTime stats right on your Apple Watch.<br/>Features:
+  <ul><li>- View your daily coding activity on your Apple Watch face.
+  <li>- Get notifications on your Apple Watch when you&apos;ve completed a WakaTime goal.
+  <li>-See your coding summary over 5 days and your position on the public leaderboard.
+  </li></ul>"
+iOS: https://apps.apple.com/us/app/waka-watch/id1607453366
 screenshots:
   - 1.png
   - 2.png
   - 3.png
   - 4.png
-producthunt: https://telegra.ph/Replace-this-link-07-23
-companies:
-  - url: https://telegra.ph/Replace-this-link-07-23
-    image: androidpolice.png
-  - url: https://telegra.ph/Replace-this-link-07-23
-    image: producthunt.png
