--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,16 +1,12 @@
 app:
   screenshots: Screenshots
   description: Description
-  featured: Featured in
 
 footer:
-  copyright: Made with ❤️ in Europe 🇪🇺 by <a href="https://www.sandoche.com" target="_blank">Sandoche</a>
+  copyright: &#169; 2022 Nitish Sachar
   links:
     - title: Github
-      url: https://github.com/sandoche/Mobile-app-landingpage-template
-      target: _blank
-    - title: Donate
-      url: https://paypal.me/kanbanote
+      url: https://github.com/uioporqwerty/waka-watch
       target: _blank
     - title: Privacy
-      url: /privacy
+      url: https://github.com/uioporqwerty/waka-watch/blob/main/docs/PRIVACY_POLICY.md
